--- a/hyperledger-BCShield/network/docker-compose.yaml
+++ b/hyperledger-BCShield/network/docker-compose.yaml
@@ -121,7 +121,7 @@ services:
 
   couchdb.peer0.hprovider:
     container_name: couchdb.peer0.hprovider
-    image: hyperledger/fabric-couchdb:0.4.18
+    image: hyperledger/fabric-couchdb:latest
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
@@ -161,7 +161,7 @@ services:
 
   couchdb.peer1.hprovider:
     container_name: couchdb.peer1.hprovider
-    image: hyperledger/fabric-couchdb:0.4.18
+    image: hyperledger/fabric-couchdb:latest
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
@@ -201,7 +201,7 @@ services:
 
   couchdb.peer2.hprovider:
     container_name: couchdb.peer2.hprovider
-    image: hyperledger/fabric-couchdb:0.4.18
+    image: hyperledger/fabric-couchdb:latest
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
@@ -240,7 +240,7 @@ services:
 
   couchdb.peer3.hprovider:
     container_name: couchdb.peer3.hprovider
-    image: hyperledger/fabric-couchdb:0.4.18
+    image: hyperledger/fabric-couchdb:latest
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
@@ -279,7 +279,7 @@ services:
 
   couchdb.peer0.research:
     container_name: couchdb.peer0.research
-    image: hyperledger/fabric-couchdb:0.4.18
+    image: hyperledger/fabric-couchdb:latest
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
@@ -318,7 +318,7 @@ services:
 
   couchdb.peer1.research:
     container_name: couchdb.peer1.research
-    image: hyperledger/fabric-couchdb:0.4.18
+    image: hyperledger/fabric-couchdb:latest
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
@@ -357,7 +357,7 @@ services:
 
   couchdb.peer2.research:
     container_name: couchdb.peer2.research
-    image: hyperledger/fabric-couchdb:0.4.18
+    image: hyperledger/fabric-couchdb:latest
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
@@ -396,7 +396,7 @@ services:
 
   couchdb.peer3.research:
     container_name: couchdb.peer3.research
-    image: hyperledger/fabric-couchdb:0.4.18
+    image: hyperledger/fabric-couchdb:latest
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
