--- a/hyperledger-BCShield/network/configtx.yaml
+++ b/hyperledger-BCShield/network/configtx.yaml
@@ -95,10 +95,32 @@ Capabilities:
         V1_1: true
     
     Orderer: &OrdererCapabilities        
-        V1_1: true
+        # V1.4.2 for Orderer is a catchall flag for behavior which has been
+        # determined to be desired for all orderers running at the v1.4.2
+        # level, but which would be incompatible with orderers from prior releases.
+        # Prior to enabling V1.4.2 orderer capabilities, ensure that all
+        # orderers on a channel are at v1.4.2 or later.
+        V1_4_2: true
+        # V1.1 for Orderer enables the new non-backwards compatible
+        # features and fixes of fabric v1.1
+        V1_1: false
+
     
     Application: &ApplicationCapabilities        
-        V1_2: true
+        # V1.4.2 for Application enables the new non-backwards compatible
+        # features and fixes of fabric v1.4.2.
+        V1_4_2: true
+        # V1.3 for Application enables the new non-backwards compatible
+        # features and fixes of fabric v1.3.
+        V1_3: false
+        # V1.2 for Application enables the new non-backwards compatible
+        # features and fixes of fabric v1.2 (note, this need not be set if
+        # later version capabilities are set)
+        V1_2: false
+        # V1.1 for Application enables the new non-backwards compatible
+        # features and fixes of fabric v1.1 (note, this need not be set if
+        # later version capabilities are set).
+        V1_1: false
 
 ################################################################################
 #
@@ -189,39 +211,7 @@ Orderer: &OrdererDefaults
         BlockValidation:
             Type: ImplicitMeta
             Rule: "ANY Writers"
-
-
-################################################################################
-#
-#   Channel
-#
-#   - Different configuration profiles may be encoded here to be specified
-#   as parameters to the configtxgen tool
-#
-################################################################################
-Channel: &ChannelDefaults
-    # Policies defines the set of policies at this level of the config tree
-    # For Channel policies, their canonical path is
-    #   /Channel/<PolicyName>
-    Policies:
-        # Who may invoke the 'Deliver' API
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-        # Who may invoke the 'Broadcast' API
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-        # By default, who may modify elements at this config level
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
-    
-    
-    Capabilities:
-        <<: *ChannelCapabilities
-
-
+   
 ################################################################################
 #
 #   Profile
@@ -234,7 +224,8 @@ Channel: &ChannelDefaults
 Profiles:
 
     HealthOrdererGenesis:
-        <<: *ChannelDefaults
+        Capabilities:
+            <<: *ChannelCapabilities
         Orderer:
             <<: *OrdererDefaults
             Organizations:
