--- a/hyperledger-BCShield/network/configtx.yaml
+++ b/hyperledger-BCShield/network/configtx.yaml
@@ -13,16 +13,16 @@ Organizations:
         ID: OrdererHpMSP
         # MSPDir is the filesystem path which contains the MSP configuration
         MSPDir: crypto-config/ordererOrganizations/healthcare.com/msp
-        Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('OrdererHpMSP.member')"
-            Writers:
-                Type: Signature
-                Rule: "OR('OrdererHpMSP.member')"
-            Admins:
-                Type: Signature
-                Rule: "OR('OrdererHpMSP.admin')"
+        # Policies:
+        #     Readers:
+        #         Type: Signature
+        #         Rule: "OR('OrdererHpMSP.member')"
+        #     Writers:
+        #         Type: Signature
+        #         Rule: "OR('OrdererHpMSP.member')"
+        #     Admins:
+        #         Type: Signature
+        #         Rule: "OR('OrdererHpMSP.admin')"
 
 
     - &HProvider        
@@ -30,25 +30,17 @@ Organizations:
         # ID to load the MSP definition as
         ID: HProviderMSP
         MSPDir: crypto-config/peerOrganizations/hprovider.healthcare.com/msp
-        Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('HProviderMSP.admin', 'HProviderMSP.peer', 'HProviderMSP.client')"
-            Writers:
-                Type: Signature
-                Rule: "OR('HProviderMSP.admin','HProviderMSP.peer', 'HProviderMSP.client')"
-            Admins:
-                Type: Signature
-                Rule: "OR('HProviderMSP.admin')"
-            # Readers:
-            #     Type: Signature
-            #     Rule: "OR('HProviderMSP.member')"
-            # Writers:
-            #     Type: Signature
-            #     Rule: "OR('HProviderMSP.member')"
-            # Admins:
-            #     Type: Signature
-            #     Rule: "OR('HProviderMSP.admin')"
+        # Policies:
+        #     Readers:
+        #         Type: Signature
+        #         Rule: "OR('HProviderMSP.admin', 'HProviderMSP.peer', 'HProviderMSP.client')"
+        #     Writers:
+        #         Type: Signature
+        #         Rule: "OR('HProviderMSP.admin','HProviderMSP.peer', 'HProviderMSP.client')"
+        #     Admins:
+        #         Type: Signature
+        #         Rule: "OR('HProviderMSP.admin')"
+
 
         AnchorPeers:
             # AnchorPeers defines the location of peers which can be used
@@ -69,21 +61,12 @@ Organizations:
         ID: ResearchMSP
         MSPDir: crypto-config/peerOrganizations/research.healthcare.com/msp
         Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('ResearchMSP.admin', 'ResearchMSP.peer', 'ResearchMSP.client')"
-            Writers:
-                Type: Signature
-                Rule: "OR('ResearchMSP.admin','ResearchMSP.peer', 'ResearchMSP.client')"
-            Admins:
-                Type: Signature
-                Rule: "OR('ResearchMSP.admin')"
             # Readers:
             #     Type: Signature
-            #     Rule: "OR('ResearchMSP.member')"
+            #     Rule: "OR('ResearchMSP.admin', 'ResearchMSP.peer', 'ResearchMSP.client')"
             # Writers:
             #     Type: Signature
-            #     Rule: "OR('ResearchMSP.member')"
+            #     Rule: "OR('ResearchMSP.admin','ResearchMSP.peer', 'ResearchMSP.client')"
             # Admins:
             #     Type: Signature
             #     Rule: "OR('ResearchMSP.admin')"
@@ -166,22 +149,22 @@ Application: &ApplicationDefaults
     # Organizations is the list of orgs which are defined as participants on
     # the application side of the network
     Organizations:
-    Policies:
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
-        LifecycleEndorsement:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Endorsement"
-        Endorsement:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Endorsement"
+    # Policies:
+    #     Readers:
+    #         Type: ImplicitMeta
+    #         Rule: "ANY Readers"
+    #     Writers:
+    #         Type: ImplicitMeta
+    #         Rule: "ANY Writers"
+    #     Admins:
+    #         Type: ImplicitMeta
+    #         Rule: "MAJORITY Admins"
+    #     LifecycleEndorsement:
+    #         Type: ImplicitMeta
+    #         Rule: "MAJORITY Endorsement"
+    #     Endorsement:
+    #         Type: ImplicitMeta
+    #         Rule: "MAJORITY Endorsement"
 
 ################################################################################
 #
@@ -228,21 +211,21 @@ Orderer: &OrdererDefaults
             # Organizations is the list of orgs which are defined as participants on
     # the orderer side of the network
     Organizations:
-    Policies:
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
-        # BlockValidation specifies what signatures must be included in the block
-        # from the orderer for the peer to validate it.
-        BlockValidation:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
+    # Policies:
+    #     Readers:
+    #         Type: ImplicitMeta
+    #         Rule: "ANY Readers"
+    #     Writers:
+    #         Type: ImplicitMeta
+    #         Rule: "ANY Writers"
+    #     Admins:
+    #         Type: ImplicitMeta
+    #         Rule: "MAJORITY Admins"
+    #     # BlockValidation specifies what signatures must be included in the block
+    #     # from the orderer for the peer to validate it.
+    #     BlockValidation:
+    #         Type: ImplicitMeta
+    #         Rule: "ANY Writers"
 ################################################################################
 #
 #   CHANNEL
@@ -251,29 +234,29 @@ Orderer: &OrdererDefaults
 #   genesis block for channel related parameters.
 #
 ################################################################################
-Channel: &ChannelDefaults
-    # Policies defines the set of policies at this level of the config tree
-    # For Channel policies, their canonical path is
-    #   /Channel/<PolicyName>
-    Policies:
-        # Who may invoke the 'Deliver' API
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-        # Who may invoke the 'Broadcast' API
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-        # By default, who may modify elements at this config level
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
+# Channel: &ChannelDefaults
+#     # Policies defines the set of policies at this level of the config tree
+#     # For Channel policies, their canonical path is
+#     #   /Channel/<PolicyName>
+#     Policies:
+#         # Who may invoke the 'Deliver' API
+#         Readers:
+#             Type: ImplicitMeta
+#             Rule: "ANY Readers"
+#         # Who may invoke the 'Broadcast' API
+#         Writers:
+#             Type: ImplicitMeta
+#             Rule: "ANY Writers"
+#         # By default, who may modify elements at this config level
+#         Admins:
+#             Type: ImplicitMeta
+#             Rule: "MAJORITY Admins"
 
-    # Capabilities describes the channel level capabilities, see the
-    # dedicated Capabilities section elsewhere in this file for a full
-    # description
-    Capabilities:
-        <<: *ChannelCapabilities
+#     # Capabilities describes the channel level capabilities, see the
+#     # dedicated Capabilities section elsewhere in this file for a full
+#     # description
+#     Capabilities:
+#         <<: *ChannelCapabilities
 
             
 
@@ -290,7 +273,8 @@ Channel: &ChannelDefaults
 Profiles:
 
     HealthOrdererGenesis:
-        <<: *ChannelDefaults
+        Capabilities:
+             <<: *ChannelCapabilities
         Orderer:
             <<: *OrdererDefaults
             Organizations:
@@ -303,7 +287,8 @@ Profiles:
                     - *HProvider
                     - *Research
     HealthChannel:
-        <<: *ChannelDefaults
+        Capabilities:
+            <<: *ChannelCapabilities
         Consortium: HealthConsortium
         Application:
             <<: *ApplicationDefaults
